New UI table for recent messages + lifecycle

--- a/Caddyfile
+++ b/Caddyfile
@@ -3,6 +3,15 @@
   https_port 3433
 }
 
+localhost:3443 {
+  tls internal
+  reverse_proxy localhost:3000
+}
+127.0.0.1:3443 {
+  tls internal
+  reverse_proxy localhost:3000
+}
+
 sqs.eu-west-1.amazonaws.com:3443 {
   tls internal
   reverse_proxy localhost:3000
