--- a/control-app/package.json
+++ b/control-app/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@babel/runtime": "^7.20.7",
     "meteor-node-stubs": "^1.2.5",
+    "pako": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/meteor": "^2",
     "@types/mocha": "^8.2.3",
+    "@types/pako": "^2.0.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "typescript": "^4.7.4"
